adding a back button

--- a/about.html
+++ b/about.html
@@ -12,8 +12,12 @@ layout: default
   </div>
 
   <div>
-  
-
+   <header class="section-padding--lg mast">
+    <a class="nav nav--white" href="{{ site.baseurl }}/">
+      <i class="fa fa-lg fa-arrow-left"></i>
+      <span>Back to Home Page</span>
+    </a>
+  </header>
     <div class="tab">
       <ul itemscope itemtype="http://schema.org/Blog">
         {% for post in paginator.posts %}
