--- a/_categories/juice.html
+++ b/_categories/juice.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Juice
-description:
-permalink: /category/juice/
+title: The Triple Bottom Line
+description: What are the main criteria that create a sustainabile food?
+permalink: /category/Triple-Bottom-Line/
 ---
 {% include category.html %}
