Added New Category "Triple Bottom Line"

--- a/_categories/Triple-bottom-line.html
+++ b/_categories/Triple-bottom-line.html
@@ -1,1 +1,7 @@
-
+---
+layout: default
+title: Triple Bottom Line
+description: What creates a real sustainable business
+permalink: /category/Hope-for-the-future/
+---
+{% include category.html %}
